# synthetic-pressure-activation-trajectories

./: .gitignore  CITATION.cff  README.md  pyproject.toml
configs/: synthetic_pressure_llama8b.yaml  synthetic_pressure_v2_llama8b.yaml
experiments/: __init__.py  activation_control_tomography.py  bidirectional_dp_diagnostic.py  bootstrap_ci.py  control_deception_intent_transition.py  control_graded_dp_bidirectional_stack.py  control_graded_dp_decision_token.py  control_graded_dp_frontier.py  control_graded_dp_stack_frontier.py  decision_token_action_response.py  decision_token_gate_diagnostic.py  eval_deception_intent_controlled.py  generate_deception_intent_scenarios.py  generate_graded_pressure_scenarios.py  generate_synthetic_pressure.py  geometric_action_response_selector.py  judge_sycon_llm.py  label_sycon_flips.py  learned_generation_action_policy.py  matched_pressure_flow_diagnostic.py  paper_style.py  plot_control.py  plot_summary.py  rollout_deception_intent.py  rollout_sycon.py  rollout_sycon_mlx.py  run.py  summarize_geometric_control.py  summarize_synthetic_pressure.py  trajectory_baselines.py
src/geoprobe/: paths.py
tests/: test_activation_control_tomography.py  test_bidirectional_dp_diagnostic.py  test_bootstrap_ci.py  test_control_deception_intent_transition.py  test_deception_intent_rollout.py  test_decision_token_gate_diagnostic.py  test_geometric_action_response_selector.py  test_geometric_probes.py  test_learned_generation_action_policy.py  test_matched_pressure_flow_diagnostic.py  test_rollout_knowledge.py  test_trajectory_baselines.py
(+26 files in other folders)
