[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activation-geometry-honesty-failures"
version = "0.1.0"
description = "Public artifact record for activation-geometry experiments on honesty failures."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "transformers>=4.40",
  "accelerate>=0.27",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "mlx>=0.31; sys_platform == 'darwin'",
  "mlx-lm>=0.31; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
